--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
         weekend_vr3: 2250, // Выходные VR 3 очки
         weekend_vr4: 3000, // Выходные VR 4 очки
         // X-Box
-        xbox_kinect: 500, // X-Box Kinnect
+        xbox_kinnect: 500, // X-Box Kinnect
         xbox1: 250, // X-Box 1 джойстик
         xbox2: 500, // X-Box 2 джойстика
         xbox3: 750, // X-Box 3 джойстика
@@ -514,7 +514,7 @@
         // Другие услуги
         karaoke: 1000, // Караоке
         board_games: 500, // Настольные игры
-        // Аренда всего помещения
+        // День рождения
         birthday: {
             1: 4000, 2: 3500, 3: 3000, 4: 3000, 5: 3000,
             6: 3000, 7: 3000, 8: 3000, 9: 3000, 10: 3000,
