--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <button type="button" class="service-tag" data-service="birthday" data-price="4000">
               <i class="fas fa-birthday-cake mr-1.5"></i>Аренда всего (День Рождения)
             </button>
-          </div>
+        </div>
           <input type="hidden" id="selectedServices" name="selectedServices">
         </div>
 
@@ -1728,6 +1728,8 @@
         }
       });
       loginBtn.addEventListener('click', showLoginModal);
+      logoutBtn.addEventListener('click', () => signOut(auth));
+      closeAuthBtn.addEventListener('click', () => authContainer.classList.add('hidden'));
 
       // --- Обработчики для услуг и скидок ---
       document.querySelectorAll('.service-tag').forEach(tag => {
