--- a/index.html
+++ b/index.html
@@ -603,6 +603,11 @@
     let adminAssignments = []; // Список назначений
     let selectedServices = new Set(); // Множество выбранных услуг
 
+    // Переменные для хранения функций отписки от слушателей Firestore
+    let unsubscribeBookings = null;
+    let unsubscribeAdmins = null;
+    let unsubscribeAdminAssignments = null;
+
     // === Цены услуг ===
     const servicePrices = {
         // PS5
@@ -685,8 +690,16 @@
     // === Загрузка данных из Firebase ===
     function loadData() {
       console.log('loadData called. isAdmin:', isAdmin); // DEBUG
-      // Загрузка бронирований клиентов
-    onSnapshot(collection(db, "bookings"), (snapshot) => {
+
+      // Отписываемся от предыдущего слушателя bookings, если он был
+      if (unsubscribeBookings) {
+        unsubscribeBookings();
+        unsubscribeBookings = null;
+        console.log('Unsubscribed from bookings'); // DEBUG
+      }
+
+      // Загрузка бронирований клиентов (слушатель активен всегда)
+      unsubscribeBookings = onSnapshot(collection(db, "bookings"), (snapshot) => {
         console.log('Bookings snapshot received:', snapshot.docs.length); // DEBUG
       bookings = snapshot.docs.map(doc => ({
         id: doc.id,
@@ -704,7 +717,13 @@
       // Загрузка администраторов (только для админа)
       if (isAdmin) {
           console.log('Attempting to load admins...'); // DEBUG
-          onSnapshot(collection(db, "admins"), (snapshot) => {
+          // Отписываемся от предыдущего слушателя admins, если он был
+          if (unsubscribeAdmins) {
+             unsubscribeAdmins();
+             unsubscribeAdmins = null;
+             console.log('Unsubscribed from admins'); // DEBUG
+          }
+          unsubscribeAdmins = onSnapshot(collection(db, "admins"), (snapshot) => {
             console.log('Admins snapshot received:', snapshot.docs.length); // DEBUG
             admins = snapshot.docs.map(doc => ({
               id: doc.id,
@@ -722,7 +741,13 @@
 
           // Загрузка назначений администраторов (только для админа)
           console.log('Attempting to load adminAssignments...'); // DEBUG
-          onSnapshot(collection(db, "adminAssignments"), (snapshot) => {
+           // Отписываемся от предыдущего слушателя adminAssignments, если он был
+          if (unsubscribeAdminAssignments) {
+             unsubscribeAdminAssignments();
+             unsubscribeAdminAssignments = null;
+             console.log('Unsubscribed from adminAssignments'); // DEBUG
+          }
+          unsubscribeAdminAssignments = onSnapshot(collection(db, "adminAssignments"), (snapshot) => {
             console.log('AdminAssignments snapshot received:', snapshot.docs.length); // DEBUG
             adminAssignments = snapshot.docs.map(doc => ({
               id: doc.id, // Используем дату как ID
@@ -734,9 +759,24 @@
             calculateSalaries();
           }, (error) => {
              console.error("Error loading adminAssignments:", error); // DEBUG
+             // Если ошибка прав доступа при загрузке, отписываемся, чтобы не повторялась
+             if (error.code === 'permission-denied' && unsubscribeAdminAssignments) {
+                 unsubscribeAdminAssignments();
+                 unsubscribeAdminAssignments = null;
+             }
           });
       } else {
-          // ... (очистка данных, если не админ) ...
+          // Если не админ, убедимся, что отписались от админских данных
+          if (unsubscribeAdmins) {
+              unsubscribeAdmins();
+              unsubscribeAdmins = null;
+              console.log('Cleaned up admins listener'); // DEBUG
+          }
+          if (unsubscribeAdminAssignments) {
+              unsubscribeAdminAssignments();
+              unsubscribeAdminAssignments = null;
+              console.log('Cleaned up adminAssignments listener'); // DEBUG
+          }
           // Очищаем также новые поля
           renderRevenueStats(0, 0, 0); // Показать нули
           renderWeeklyPayroll({}, null); // Показать пустое состояние
@@ -1055,7 +1095,7 @@
         // --- Валидация ---
         if (!bookingData.clientName) {
         alert('Пожалуйста, введите имя клиента.');
-            bookingForm.clientName.focus();
+      bookingForm.clientName.focus();
         return;
       }
         // Валидация номера телефона (должно быть 11 цифр после +7)
@@ -1706,7 +1746,7 @@
         loadData(); // Загрузить только публичные данные (бронирования)
       }
       // Перерисовать календарь и список записей, чтобы применить/убрать админские кнопки
-    renderCalendar();
+      renderCalendar();
     renderBookingsList();
     });
 
@@ -1764,29 +1804,29 @@
       });
 
       // --- Календарь клиентов ---
-      prevMonthBtn.addEventListener('click', () => {
-        currentDate.setMonth(currentDate.getMonth() - 1);
+    prevMonthBtn.addEventListener('click', () => {
+      currentDate.setMonth(currentDate.getMonth() - 1);
         selectedDate = null; // Сброс выбранной даты при смене месяца
-        renderCalendar();
-      });
-      nextMonthBtn.addEventListener('click', () => {
-        currentDate.setMonth(currentDate.getMonth() + 1);
-        selectedDate = null;
-        renderCalendar();
-      });
+      renderCalendar();
+    });
+    nextMonthBtn.addEventListener('click', () => {
+      currentDate.setMonth(currentDate.getMonth() + 1);
+      selectedDate = null;
+      renderCalendar();
+    });
       addBookingBtn.addEventListener('click', () => openBookingModal(selectedDate || new Date())); // Передаем выбранную дату или сегодня
 
 
       // --- Список записей клиентов ---
-      prevMonthBookingsBtn.addEventListener('click', () => {
+    prevMonthBookingsBtn.addEventListener('click', () => {
         console.log('Prev month bookings clicked. Old month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
-        bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() - 1);
+      bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() - 1);
          console.log('New month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
         renderBookingsList(); // Убедимся, что вызывается
-      });
-      nextMonthBookingsBtn.addEventListener('click', () => {
+    });
+    nextMonthBookingsBtn.addEventListener('click', () => {
          console.log('Next month bookings clicked. Old month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
-        bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() + 1);
+      bookingsViewMonth.setMonth(bookingsViewMonth.getMonth() + 1);
         console.log('New month:', bookingsViewMonth.toLocaleDateString()); // DEBUG
         renderBookingsList(); // Убедимся, что вызывается
       });
@@ -1863,7 +1903,7 @@
                    authContainer.classList.add('hidden');
                }
                if (!bookingModal.classList.contains('hidden')) {
-                   bookingModal.classList.add('hidden');
+        bookingModal.classList.add('hidden');
                }
                if (!assignAdminModal.classList.contains('hidden')) {
                    assignAdminModal.classList.add('hidden');
@@ -1978,7 +2018,7 @@
                 bookingRevenue = servicePrices.birthday[hours] || servicePrices.birthday[4];
             } else if (duration === 0.5 && servicePriceHalfHour[booking.serviceType]) {
                 bookingRevenue = servicePriceHalfHour[booking.serviceType] || 0;
-            } else {
+        } else {
                 const pricePerHour = servicePrices[booking.serviceType] || 0;
                 bookingRevenue = pricePerHour * duration;
             }
